@@ -90,7 +90,7 @@ clearcommand.description: Clear all monsters and animals from a world.
 clearcommand.permission-description: Allow users to clear monsters and animals from a world.
 clearcommand.usage: <name>
 clearcommand.world-is-not-managed: {0} is not managed by DimensionDoor.
-clearcommand.report: &YELLOW{0} &GREENmonsters and animals cleared from &YELLOW{1}&GREEN.
+clearcommand.clear-report: &YELLOW{0} &GREENmonsters and animals cleared from &YELLOW{1}&GREEN.
 clearcommand.must-specify-a-world-name: You must specify a world name!
 clearcommand.list-worlds-hint: You may only clear entities from loaded worlds.
 
@@ -98,15 +98,17 @@ infocommand.name: info
 infocommand.description: Get information about a world..
 infocommand.permission-description: Allow users to get information about worlds.
 infocommand.usage: <name>
-infocommand.header: World infomation for {0}:
-infocommand.list-item: - {0}: {1}
+infocommand.header: &LIGHT_PURPLEWorld infomation for &AQUA{0}:
+infocommand.list-item: &YELLOW- {0}: &GREEN{1}
 infocommand.seed: seed
 infocommand.enabled: enabled 
+infocommand.difficulty = difficulty
 infocommand.environment: environment
 infocommand.gamemode: game mode
 infocommand.isolated_chat: isolated chat
 infocommand.pvp: pvp
 infocommand.spawn_animals: spawn animals
+infocommand.spawn_monsters: spawn animals
 infocommand.keep_spawn_in_memory: keep spawn in memory
 infocommand.generator_plugin: generator plugin
 infocommand.generator_id: generator id
