@@ -1,5 +1,8 @@
 Changelog for DimensionDoor (v2.1.1-SNAPSHOT)
 
+2012-07-31 23:42:48 +0100    implemented info command (James Richardson)
+2012-07-31 23:25:58 +0100    added ClearCommand (James Richardson)
+2012-07-31 23:20:51 +0100    remove old classes ready for refactoring (James Richardson)
 2012-07-31 23:10:29 +0100    fix ListCommand (James Richardson)
 2012-07-31 23:01:01 +0100    reimplement old commands (James Richardson)
 2012-07-31 22:09:43 +0100    better end of command notification fixed NPE (James Richardson)
